--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,7 +1,7 @@
 <form action="/articles/:id/edit" method="post">
   <input type="hidden" name="_method" value="patch">
 <p>
-    Title:<input id="TITLE" type="text" name="article[title]" value="<%= @article.title %>" />
+    Title:<input id="title" type="text" name="article[title]" value="<%= @article.title %>" />
     
     Content:<input id="content" type="text" name="article[content]"  value="<%= @article.content %>">
      </p>
