--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -4,7 +4,7 @@
     <label for="title">Title</label>
     Title:<input id="title" type="text" name="article[title]" value="<%= @article.title %>" />
     
-    
+    <label for="content">Content</label>
     Content:<input id="content" type="text" name="article[content]"  value="<%= @article.content %>">
      </p>
   <input type="submit" value="submit" />
