--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,4 +1,4 @@
-<form action="/articles/:id/edit" method="post">
+<form action="/articles/<%= @article.id %>" method="post">
   <input type="hidden" name="_method" value="patch">
 <p>
    
