--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,13 +1,13 @@
-<form action="/articles/:id" method="post">
-  <input type="hidden" name="_method" value="patch">
-<p>
+<!--<form action="/articles/:id" method="post">-->
+<!--  <input type="hidden" name="_method" value="patch">-->
+<!--<p>-->
    
-      <input id="title" type="text" name="article[title]" value="<%= @article.title %>" />
+<!--      <input id="title" type="text" name="article[title]" value="<%= @article.title %>" />-->
     
     
-    Content:<input id="content" type="text" name="article[content]"  value="<%= @article.content %>">
-     </p>
-  <input type="submit" value="submit" />
-</form>
+<!--    Content:<input id="content" type="text" name="article[content]"  value="<%= @article.content %>">-->
+<!--     </p>-->
+<!--  <input type="submit" value="submit" />-->
+<!--</form>-->
 
 
