--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,13 +1,27 @@
-<form action="/articles/:id" method="post">
-  <input type="hidden" name="_method" value="patch">
-<p>
+<!--<form action="/articles/:id" method="post">-->
+<!--  <input type="hidden" name="_method" value="patch">-->
+<!--<p>-->
    
+<!--      <input id="title" type="text" name="article[title]" value="<%= @article.title %>" />-->
+    
+    
+<!--    Content:<input id="content" type="text" name="article[content]"  value="<%= @article.content %>">-->
+<!--     </p>-->
+<!--  <input type="submit" value="submit" />-->
+<!--</form>-->
+
+<form action="/articles/<%= @article.id %>" method="post">
+  <input type="hidden" name="_method" value="patch">
+  <ul>
+    <li>
+      <label for="title">Title</label>
       <input id="title" type="text" name="article[title]" value="<%= @article.title %>" />
-    
-    
-    Content:<input id="content" type="text" name="article[content]"  value="<%= @article.content %>">
-     </p>
-  <input type="submit" value="submit" />
+    </li>
+    <li>
+      <label for="content">Content</label>
+      <textarea id="content" type="text" name="article[content]"  value="<%= @article.content %>">
+      </textarea>
+    </li>
+  </ul>
+  <input type="submit" />
 </form>
-
-
