Automatically backed up by Learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,12 +1,12 @@
-<!--<form action="/articles/:id" method="post">-->
-<!--  <input type="hidden" name="_method" value="patch">-->
-<!--<p>-->
+
+
+
    
 <!--      <input id="title" type="text" name="article[title]" value="<%= @article.title %>" />-->
     
     
 <!--    Content:<input id="content" type="text" name="article[content]"  value="<%= @article.content %>">-->
-<!--     </p>-->
+
 
 
 
@@ -14,10 +14,10 @@
   <input type="hidden" name="_method" value="patch">
   <p>
       
-      <input id="title" type="text" name="article[title]" value="<%= @article.title %>" />
+     Title: <input id="title" type="text" name="article[title]" value="<%= @article.title %>" />
     
       
-      <input id="content" type="text" name="article[content]"  value="<%= @article.content %>">
+     Content: <input id="content" type="text" name="article[content]"  value="<%= @article.content %>">
       </p>
     
   <input type="submit" />
