--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,6 +2,6 @@
 <%= @article.content %>
 
 <form method="post" action="/articles/<%= @article.id %>">
-  <input value="delete" />
+  <input name="_method" value="delete" />
   <input type="submit" />
 </form>
